[cs-ui] CSDatepicker - Fixed IsClearable button/datepicker icon misaligned

--- a/cs-ui-components/src/sass/components/datepicker/_cs-datepicker.scss
+++ b/cs-ui-components/src/sass/components/datepicker/_cs-datepicker.scss
@@ -31,6 +31,7 @@
 			min-height: 2rem;
 			padding: 0 1.8125rem 0 0.75rem;
 			border-radius: var(--cs-datepicker-border-radius, 0.25rem);
+			margin: 0;
 			transition: border 0.1s linear, background-color 0.1s linear;
 			width: 100%;
 			@include sbg(--cs-datepicker-bg);
@@ -410,7 +411,8 @@
 	width: 1rem;
 	height: 1rem;
 	right: 1.75rem;
-	top: 0.5rem;
+	top: 50%;
+	transform: translateY(-50%);
 	border-radius: 0.25rem;
 	padding: 0;
 	display: flex;
